--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,11 +4,14 @@ site_author: Oliver Jakoubek
 nav:
   - Start: 'index.md'
   - SQL:
-    - 'sql/'
+    - 'sql/index.md'
   - 'SQL Anywhere':
-    - 'sql-anywhere/'
+    - 'sql-anywhere/index.md'
+    - Tabellen: sql-anywhere/table.md
+    - 'System-Views und -Prozeduren': sql-anywhere/system.md
+    - Zeilengenerator: sql-anywhere/zeilengenerator.md
   - PostgreSQL:
-    - 'postgresql/'
+    - 'postgresql/index.md'
   - Go:
     - 'go/index.md'
     - Structs: go/struct.md
@@ -18,6 +21,7 @@ nav:
     - Loops: go/loops.md
     - Switch: go/switch.md
     - JSON: go/json.md
+    - Webserver: go/webserver.md
   - Xojo:
     - 'xojo/index.md'
     - Arrays: xojo/arrays.md
@@ -50,3 +54,6 @@ plugins:
         - de
         - en
 
+markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.superfences
