Added: Datenbank-Import aus Excel-Dateien
Beschreibung, wie man aus Excel-Datei IN Excel die Import-Statements erzeugt und beim Importvorgang über eine temp. Importtabelle die Importdaten anreichert, z.B. zur Umsetzung von Klartextschlüsseln in Primärschlüssel.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ nav:
   - Start: 'index.md'
   - SQL:
     - 'sql/index.md'
+    - 'Stored Procedures': sql/stored-procedures.md
+    - Import Excel in Datenbank: sql/datenbank-import-aus-excel.md
   - 'SQL Anywhere':
     - 'sql-anywhere/index.md'
     - Administration:
@@ -52,6 +54,7 @@ nav:
   - Misc:
     - 'misc/index.md'
     - MkDocs: misc/mkdocs.md
+    - Markdown: misc/markdown.md
   - 'Über':
     - 'info/index.md'
 
