--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,10 @@ jobs:
       # Step 3 - Setup dependencies
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip     # install pip
-          python3 -m pip install mkdocs            # install mkdocs 
-          python3 -m pip install mkdocs-material   # install material theme
+          python3 -m pip install --upgrade pip          # install pip
+          python3 -m pip install mkdocs                 # install mkdocs
+          python3 -m pip install mkdocs-material        # install material theme
+          python3 -m pip install mkdocs-macros-plugin   # install mkdocs-macros-plugin
 
       # Step 4 - Build site
       - name: Build site
