Titel geändert von Team Jakoubek |> Technotes zu Technotes by Oliver Jakoubek

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Team Jakoubek |> Technotes
+site_name: Technotes by Oliver Jakoubek
 site_author: Oliver Jakoubek
 site_url: https://technotes.jakoubek.net/
 
