--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ theme:
     scheme: default
     primary: blue
     accent: indigo
+  custom_dir: overrides
   features:
     - navigation.tabs
     - navigation.instant
@@ -106,3 +107,7 @@ markdown_extensions:
   - pymdownx.superfences
   - admonition
   - meta
+
+extra:
+  analytics:
+    provider: matomo
