--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
     - 'Datum und Zeit': ninox/datum-zeit.md
     - 'Globale Funktionen': ninox/globale-funktionen.md
     - 'Text in Ninox zeilenweise verarbeiten': ninox/text-zeilenweise-verarbeiten.md
+    - 'Settings-Tabelle': ninox/settings-tabelle.md
     - 'Pushover-Benachrichtigung mit Ninox senden': ninox/pushover-benachrichtigung-mit-ninox-senden.md
   - Misc:
     - 'misc/index.md'
