--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
     - 'Datum und Zeit': ninox/datum-zeit.md
     - 'Globale Funktionen': ninox/globale-funktionen.md
     - 'Text in Ninox zeilenweise verarbeiten': ninox/text-zeilenweise-verarbeiten.md
+    - 'Benutzerdefinierter CSV-Import': ninox/csv-import.md
     - 'Settings-Tabelle': ninox/settings-tabelle.md
     - Zeilengenerator: ninox/zeilengenerator.md
     - 'Pushover-Benachrichtigung mit Ninox senden': ninox/pushover-benachrichtigung-mit-ninox-senden.md
