--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,7 @@ nav:
     - Datenbank: xojo/datenbank.md
   - Ninox:
     - 'ninox/index.md'
-    - 'Administrator-Modus': ninox/admin.md
+    - 'Administrator-Modus': ninox/administrator-modus.md
     - 'Skript-Programmierung': ninox/skripting.md
     - 'Arbeiten mit Datensätzen': ninox/daten.md
     - 'Datum und Zeit': ninox/datum-zeit.md
