--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,7 +102,7 @@ theme:
     - navigation.top
   highlightjs: true
 
-copyright: Copyright &copy; 2022&mdash;2023 <a href="https://www.jakoubek.net/?ref=tnt">Oliver Jakoubek Software & Beratung</a>
+copyright: Copyright &copy; 2022&mdash;2024 <a href="https://www.oliverjakoubek.de/?ref=tnt">Oliver Jakoubek Software & Beratung</a>
 
 plugins:
   - tags:
